Fixed issue with homepage title and spacing between date and blog title on blog index

--- a/theme/swanlotus/static/sass/swanlotus.sass
+++ b/theme/swanlotus/static/sass/swanlotus.sass
@@ -157,6 +157,12 @@ a:hover
     text-decoration: $link-decoration
 
 /* Styles for blog index */
+.content h5.entry-title
+    margin-bottom: 0em
+
+.content .entry-content
+    margin-top: 0.8em
+
 .content ol#post-list
     list-style-type: none
 
